kubernetes/backend-api-1.deploy.yaml
#
# Backend api 1 deployment.
#

kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-api-1
  labels:
    app: backend-api-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-api-1
  template:
    metadata:
      labels:
        app: backend-api-1
    spec:
      containers:
      - name: backend-api-1-pods

        image: localhost:5000/microservice-example-1/backend-api1:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 3010

        livenessProbe:
          httpGet:
            path: /api/health
            port: 3010
          initialDelaySeconds: 3
          periodSeconds: 20

        resources:
          requests:
            memory: "256M"
            cpu: 0.25
