kubernetes/frontend.deploy.yaml
#
# Frontend deployment.
#

kind: Deployment
apiVersion: apps/v1
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend-pods

        image: localhost:5000/microservice-example-1/frontend:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 3000

        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 20

        resources:
          requests:
            memory: "64M"
            cpu: 0.125
