kubernetes/backend-api-2.svc.yaml
#
# Backend api 1 ClusterIP.
#

kind: Service
apiVersion: v1
metadata:
  name: backend-api-2-svc
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3020
  selector:
    app: backend-api-2
