kubernetes/frontend.svc.yaml
#
# Frontend ClusterIP.
#
kind: Service
apiVersion: v1
metadata:
  name: frontend-svc
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: frontend
